added a section for forwarding the logs to elasticsearch

--- a/fluent.conf
+++ b/fluent.conf
@@ -7,3 +7,15 @@
 <match *>
   type stdout
 </match>
+
+<match elasticsearch>
+  type copy
+  <store>
+    type stdout
+  </store>
+  <store>
+    type elasticsearch
+    logstash_format true
+    flush_interval 5s
+  </store>
+</match>
