added config for storing the logs in elasticsearch

--- a/fluent.conf
+++ b/fluent.conf
@@ -4,17 +4,15 @@
   bind 0.0.0.0
 </source>
 
-<match *>
-  type stdout
-</match>
-
-<match elasticsearch>
+<match *.**>
   type copy
   <store>
     type stdout
   </store>
   <store>
     type elasticsearch
+    host elasticsearch
+    port 9200
     logstash_format true
     flush_interval 5s
   </store>
