--- a/kubernetes.conf
+++ b/kubernetes.conf
@@ -1,13 +1,18 @@
 <source>
-   type tail path
-   /var/log/containers/*.log
+   type tail
+   path /var/lib/docker/containers/*/*-json.log
    pos_file Fluentd-docker.pos
    time_format %Y-%m-%dT%H:%M:%S
    tag kubernetes.*
    format json
+   time_key time
    read_from_head true
 </source>
  
+<filter kubernetes.var.lib.docker.containers.*.*.log>
+   type kubernetes_metadata
+</filter>
+
 <match **>
    type stdout
 </match>
