switched to storing the logs in elasticsearch

--- a/kubernetes.conf
+++ b/kubernetes.conf
@@ -14,5 +14,12 @@
 </filter>
 
 <match **>
-   type stdout
+  type copy
+  <store>
+    type elasticsearch
+    host elasticsearch
+    port 9200
+    logstash_format true
+    flush_interval 5s
+  </store>
 </match>
